@@ -13,6 +13,12 @@ services:
     ports:
       - ${MYSQL_PORT_EXTERNAL}:${MYSQL_PORT}
     restart: always
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "--host=localhost", "--password=${MYSQL_ROOT_PASSWORD}"]
+      interval: 1m30s
+      timeout: 30s
+      retries: 6
+      start_period: 40s
 
   mongodb:
     image: ${MONGODB_IMAGE}:${MONGODB_VERSION}
@@ -39,7 +45,7 @@ services:
       - ${ANNOTATION_TOOL_HTTP_PORT}:80
       - ${ANNOTATION_TOOL_HTTPS_PORT}:443
     depends_on:
-      - mariadb
-      - mongodb
-    links:
-      - 'mariadb'
+      mariadb:
+        condition: service_healthy
+          #    links:
+          #      - 'mariadb'
